<resources>
    <string name="app_name">MV</string>
    <string name="_720p">720p</string>
    <string name="_1080p">1080p</string>
    <string name="_2160p">2160p</string>
    <string name="download">Download</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="info_icon">Info Icon</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="developer_info_isuru_hettiarachchi">Developer Info: Isuru Hettiarachchi</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="developer_image">Developer Image</string>
</resources>