<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/movie_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/movie_runtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/movie_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/movie_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/movie_torrent_720p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_720p"
            android:visibility="gone"/>

        <Button
            android:id="@+id/movie_torrent_1080p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1080p"
            android:visibility="gone"/>
        <Button
            android:id="@+id/movie_torrent_2160p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2160p"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
